[build-system]
requires = [
    "cython>=3.1.0",
    "numpy>=2.0.0,<3",
    "scikit-build-core>=0.12.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "pycocotools"
version = "2.0.11"
description = "Official APIs for the MS-COCO dataset"
requires-python = ">=3.9"
license.text = "FreeBSD"
dependencies = [
    "numpy",
]

[project.readme]
text = '''
# pycocotools

This is a fork of the original [cocoapi](https://github.com/cocodataset/cocoapi), with bug fixes and packaging improvements.

This is also the "official" source of the pypi package `pycocotools`, available for download at [pypi](https://pypi.org/project/pycocotools/).

Changes in this fork include:
* Add CircleCI tests
* Support pip-installation correctly
* Support windows
* Don't import matplotlib unless needed
* Close file handle after openning
* Fix a small bug in rleToBbox
* Fix a segfault in RLE decoding
* Fix deprecated usage of other libraries

For compatibility, we will not make any API changes or non-bug behavior changes to the existing APIs of the official cocoapi.

## Instructions for maintainers: to build a sdist package:
```
python -m build --sdist ./PythonAPI
```
'''
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/ppwwyyxx/cocoapi"

[project.optional-dependencies]
all = ["matplotlib>=2.1.0"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["pycocotools"]
wheel.py-api = "cp312"
